[package]
name = "lua-importer"
version = "0.1.0"
edition = "2021"
about="imports lua files into one"
description="imports lua files into one"
author="Luna (pozm)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
